[package]
name = "satomic-swap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18.16"

[dev-dependencies]
solana-program-test = "1.18.16"
solana-sdk = "1.18.16"
tokio = { version = "1.36.0", features = ["full"] }

[features]
default = []
test-bpf = []

[profile.release]
debug = 0
debug-assertions = false
opt-level = 3
strip = true
codegen-units = 1
panic = "abort"

[profile.test]
# required to avoid a long running process of librustcash additional chain validation that is enabled with debug assertions
debug-assertions = false

[profile.dev]
opt-level = 0
debug = 1
debug-assertions = false
panic = 'unwind'
incremental = true
codegen-units = 256
